--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <a href="https://github.com/WalkerAlfaro" target="_blank"> Walker Alfaro Trelles</a>.
     </div>
   </div>
-<script src="/js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
