added alternative texts and check links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="card">
         <div class="cardFront">
           <div class="card__star">
-            <img src="/images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="star_image" />
           </div>
           <h1 class="card__title">How did we do?</h1>
           <p class="card__body">
